Win32: always use the performance timers (fix #3918)

They may be inconsistent on broken multi-processor hardware. But the
system tick count is causing worse problems with power saving features.